// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner should-work-with-arrays 1`] = `
Array [
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 8,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "10",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 11,
    "fullPos": 10,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 13,
    "fullPos": 11,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 12,
    "value": "0",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 14,
    "fullPos": 13,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 13,
  },
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 21,
    "fullPos": 14,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 23,
    "fullPos": 21,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 25,
    "fullPos": 23,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 23,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 26,
    "fullPos": 25,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 25,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 26,
    "fullPos": 26,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 26,
  },
]
`;

exports[`Scanner should-work-with-binary-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 3,
    "fullPos": 1,
    "kind": 9,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 5,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "SubToken",
    "end": 9,
    "fullPos": 7,
    "kind": 10,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 11,
    "fullPos": 9,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 13,
    "fullPos": 11,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 12,
  },
  Object {
    "__debugKind": "MulToken",
    "end": 15,
    "fullPos": 13,
    "kind": 11,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 15,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 19,
    "fullPos": 17,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 18,
  },
  Object {
    "__debugKind": "DivToken",
    "end": 21,
    "fullPos": 19,
    "kind": 12,
    "leadingIndent": 0,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 23,
    "fullPos": 21,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 25,
    "fullPos": 23,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 24,
  },
  Object {
    "__debugKind": "ModToken",
    "end": 27,
    "fullPos": 25,
    "kind": 13,
    "leadingIndent": 0,
    "pos": 26,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 29,
    "fullPos": 27,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 28,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 31,
    "fullPos": 29,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 30,
  },
  Object {
    "__debugKind": "LessThanToken",
    "end": 33,
    "fullPos": 31,
    "kind": 14,
    "leadingIndent": 0,
    "pos": 32,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 35,
    "fullPos": 33,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 34,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 37,
    "fullPos": 35,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 36,
  },
  Object {
    "__debugKind": "GreaterThanToken",
    "end": 39,
    "fullPos": 37,
    "kind": 15,
    "leadingIndent": 0,
    "pos": 38,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 41,
    "fullPos": 39,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 40,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 43,
    "fullPos": 41,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 42,
  },
  Object {
    "__debugKind": "LessEqualsThanToken",
    "end": 46,
    "fullPos": 43,
    "kind": 16,
    "leadingIndent": 0,
    "pos": 44,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 48,
    "fullPos": 46,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 47,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 50,
    "fullPos": 48,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 49,
  },
  Object {
    "__debugKind": "GreaterEqualsThanToken",
    "end": 53,
    "fullPos": 50,
    "kind": 17,
    "leadingIndent": 0,
    "pos": 51,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 55,
    "fullPos": 53,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 54,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 57,
    "fullPos": 55,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 56,
  },
  Object {
    "__debugKind": "EqualsEqualsToken",
    "end": 60,
    "fullPos": 57,
    "kind": 18,
    "leadingIndent": 0,
    "pos": 58,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 62,
    "fullPos": 60,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 61,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 63,
    "fullPos": 62,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 63,
  },
]
`;

exports[`Scanner should-work-with-function 1`] = `
Array [
  Object {
    "__debugKind": "DefnKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 6,
    "fullPos": 4,
    "id": "f",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 5,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 9,
    "fullPos": 8,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 11,
    "fullPos": 9,
    "id": "y",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 12,
    "fullPos": 11,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 11,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 14,
    "fullPos": 12,
    "id": "z",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 13,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 16,
    "fullPos": 14,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 17,
    "fullPos": 16,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 23,
    "fullPos": 17,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 22,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 25,
    "fullPos": 23,
    "kind": 9,
    "leadingIndent": 4,
    "pos": 24,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 27,
    "fullPos": 25,
    "id": "y",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 26,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 27,
    "fullPos": 27,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 27,
  },
]
`;

exports[`Scanner should-work-with-function-call 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 4,
    "fullPos": 2,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 2,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 5,
    "fullPos": 4,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 5,
    "fullPos": 5,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 5,
  },
]
`;

exports[`Scanner should-work-with-get-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "a",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 2,
    "fullPos": 1,
    "kind": 7,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 3,
    "fullPos": 2,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 2,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 4,
    "fullPos": 3,
    "kind": 8,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
]
`;

exports[`Scanner should-work-with-global-variable 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 10,
    "fullPos": 10,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 10,
  },
]
`;

exports[`Scanner should-work-with-if-expression 1`] = `
Array [
  Object {
    "__debugKind": "IfKeyword",
    "end": 2,
    "fullPos": 0,
    "kind": 28,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 4,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 5,
    "fullPos": 4,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 16,
    "fullPos": 5,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 10,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 17,
    "fullPos": 16,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 16,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 20,
    "fullPos": 17,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 17,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 21,
    "fullPos": 20,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "ElseKeyword",
    "end": 26,
    "fullPos": 21,
    "kind": 29,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 27,
    "fullPos": 26,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 26,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 38,
    "fullPos": 27,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 32,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 38,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 42,
    "fullPos": 39,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 39,
    "value": "B",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 43,
    "fullPos": 42,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 42,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 43,
    "fullPos": 43,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 43,
  },
]
`;

exports[`Scanner should-work-with-if-expression-with-if-only 1`] = `
Array [
  Object {
    "__debugKind": "IfKeyword",
    "end": 2,
    "fullPos": 0,
    "kind": 28,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 4,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 5,
    "fullPos": 4,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 16,
    "fullPos": 5,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 10,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 17,
    "fullPos": 16,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 16,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 20,
    "fullPos": 17,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 17,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 21,
    "fullPos": 20,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 21,
    "fullPos": 21,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 21,
  },
]
`;

exports[`Scanner should-work-with-integer 1`] = `
Array [
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 1,
    "fullPos": 0,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 0,
    "value": "1",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 1,
    "fullPos": 1,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 1,
  },
]
`;

exports[`Scanner should-work-with-local-expression 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
]
`;

exports[`Scanner should-work-with-local-variable 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 11,
    "fullPos": 10,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 11,
  },
]
`;

exports[`Scanner should-work-with-method-call 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "f",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 6,
    "fullPos": 4,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 4,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 7,
    "fullPos": 7,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 7,
  },
]
`;

exports[`Scanner should-work-with-null 1`] = `
Array [
  Object {
    "__debugKind": "NullKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 24,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
]
`;

exports[`Scanner should-work-with-object-without-extends 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 7,
    "fullPos": 6,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 15,
    "fullPos": 7,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 12,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 15,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 16,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 19,
    "fullPos": 17,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 18,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 22,
    "fullPos": 19,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 20,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 33,
    "fullPos": 22,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 35,
    "fullPos": 33,
    "id": "f",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 34,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 36,
    "fullPos": 35,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 35,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 37,
    "fullPos": 36,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 36,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 38,
    "fullPos": 37,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 51,
    "fullPos": 38,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 47,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 52,
    "fullPos": 51,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 51,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 53,
    "fullPos": 52,
    "id": "x",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 52,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 53,
    "fullPos": 53,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 53,
  },
]
`;

exports[`Scanner should-work-with-objects 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "id": "p",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 10,
    "fullPos": 9,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 18,
    "fullPos": 10,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 18,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 19,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 22,
    "fullPos": 20,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 21,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 25,
    "fullPos": 22,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 23,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 36,
    "fullPos": 25,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 38,
    "fullPos": 36,
    "id": "f",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 38,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 40,
    "fullPos": 39,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 39,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 41,
    "fullPos": 40,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 40,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 54,
    "fullPos": 41,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 50,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 55,
    "fullPos": 54,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 54,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 56,
    "fullPos": 55,
    "id": "x",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 55,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 56,
    "fullPos": 56,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 56,
  },
]
`;

exports[`Scanner should-work-with-objects-and-slots 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "id": "p",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 10,
    "fullPos": 9,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 18,
    "fullPos": 10,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 18,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 19,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 22,
    "fullPos": 20,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 21,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 25,
    "fullPos": 22,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 23,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 36,
    "fullPos": 25,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 38,
    "fullPos": 36,
    "id": "f",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 38,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 39,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 39,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 41,
    "fullPos": 40,
    "kind": 1,
    "leadingIndent": 4,
    "pos": 40,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 43,
    "fullPos": 41,
    "id": "y",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 42,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 44,
    "fullPos": 43,
    "kind": 1,
    "leadingIndent": 4,
    "pos": 43,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 46,
    "fullPos": 44,
    "id": "z",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 45,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 47,
    "fullPos": 46,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 46,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 48,
    "fullPos": 47,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 47,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 61,
    "fullPos": 48,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 57,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 62,
    "fullPos": 61,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 61,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 63,
    "fullPos": 62,
    "id": "x",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 62,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 65,
    "fullPos": 63,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 64,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 67,
    "fullPos": 65,
    "id": "x",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 66,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 69,
    "fullPos": 67,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 68,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 71,
    "fullPos": 69,
    "id": "y",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 70,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 73,
    "fullPos": 71,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 72,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 75,
    "fullPos": 73,
    "id": "z",
    "kind": 21,
    "leadingIndent": 8,
    "pos": 74,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 75,
    "fullPos": 75,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 75,
  },
]
`;

exports[`Scanner should-work-with-printf 1`] = `
Array [
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 22,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 27,
    "fullPos": 8,
    "kind": 20,
    "leadingIndent": 0,
    "pos": 8,
    "value": " My age is ~.\\\\ n ",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 29,
    "fullPos": 27,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 28,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 31,
    "fullPos": 29,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 30,
    "value": "8",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 32,
    "fullPos": 31,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 31,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 32,
    "fullPos": 32,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 32,
  },
]
`;

exports[`Scanner should-work-with-set-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "a",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 2,
    "fullPos": 1,
    "kind": 7,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 3,
    "fullPos": 2,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 2,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 4,
    "fullPos": 3,
    "kind": 8,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 6,
    "fullPos": 4,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 5,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 8,
    "fullPos": 6,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 7,
    "value": "0",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 8,
    "fullPos": 8,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 8,
  },
]
`;

exports[`Scanner should-work-with-slot-assignment 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 2,
    "id": "field",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 9,
    "fullPos": 7,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 12,
    "fullPos": 9,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 10,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 12,
    "fullPos": 12,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 12,
  },
]
`;

exports[`Scanner should-work-with-slot-lookup 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 2,
    "id": "field",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 7,
    "fullPos": 7,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 7,
  },
]
`;

exports[`Scanner should-work-with-top-level-expression 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
]
`;

exports[`Scanner should-work-with-variable-assignment 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 3,
    "fullPos": 1,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 2,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 6,
    "fullPos": 3,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 4,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 6,
    "fullPos": 6,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 6,
  },
]
`;

exports[`Scanner should-work-with-variable-reference 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 1,
    "fullPos": 1,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 1,
  },
]
`;

exports[`Scanner should-work-with-while-expression 1`] = `
Array [
  Object {
    "__debugKind": "WhileKeyword",
    "end": 5,
    "fullPos": 0,
    "kind": 30,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 5,
    "id": "x",
    "kind": 21,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 8,
    "fullPos": 7,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 14,
    "fullPos": 8,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 13,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 16,
    "fullPos": 14,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 18,
    "fullPos": 16,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 17,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 20,
    "fullPos": 18,
    "kind": 9,
    "leadingIndent": 4,
    "pos": 19,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 22,
    "fullPos": 20,
    "id": "y",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 21,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 22,
    "fullPos": 22,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 22,
  },
]
`;
